--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
+    "js-cookie": "^2.2.1",
+    "jstimezonedetect": "^1.0.7",
     "popper.js": "^1.16.0",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
