--- a/test/fixtures/activities.yml
+++ b/test/fixtures/activities.yml
@@ -2,12 +2,12 @@
 
 one:
   project: one
-  desc: Working hard
+  description: Working hard
   start: 2019-11-08 12:50:54
-  duration: 600
+  length: 600
 
 two:
   project: two
-  desc: Or hardly working
+  description: Or hardly working
   start: 2019-11-08 12:60:54
-  duration: 3600
+  length: 3600
