--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "rails-form-validation": "^1.0.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "sprintf-js": "^1.1.2",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
