--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user: one
+  user: user1
   client: one
   name: Rails Upgrade
 
 two:
-  user: two
+  user: user2
   client: two
   name: New Api
