--- a/test/fixtures/clients.yml
+++ b/test/fixtures/clients.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user: one
+  user: user1
   name: Bumble
 
 two:
-  user: two
+  user: user2
   name: Tinder
