--- a/test/fixtures/clients.yml
+++ b/test/fixtures/clients.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  user: user1
+c1:
+  user: u1
   name: Bumble
 
-two:
-  user: user2
+c2:
+  user: u2
   name: Tinder
