--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  user: user1
-  client: one
+p1:
+  user: u1
+  client: c1
   name: Rails Upgrade
 
-two:
-  user: user2
-  client: two
+p2:
+  user: u2
+  client: c2
   name: New Api
