--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,6 @@
 
 default: &default
-  adapter: postgresql
+  adapter: <%= ENV.fetch("DB_ADAPTER") { 'postgresql' } %>
   encoding: unicode
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
