--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,8 @@
 
 default: &default
   adapter: <%= ENV.fetch("DB_ADAPTER") { 'postgresql' } %>
-  encoding: unicode
+  encoding: unicode   # postresql
+  #encoding: utf8mb4   # mysql2
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   host: localhost
