Mention the branch on the home page for capistrano testing.

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,5 @@
 <%
-  adapter = ENV.fetch("DB_ADAPTER") { 'postgresql' }
+  adapter = ENV.fetch("DB_ADAPTER") || 'postgresql'
   encoding = (adapter == 'postgresql') ? 'unicode' : 'utf8mb4'
 %>
 
