--- a/config/env.yml.example
+++ b/config/env.yml.example
@@ -1,6 +1,7 @@
-
 DB_ADAPTER: postgresql
-DATABASE_URL: postgresql://rails:rails123@localhost/activity_timer_prod
+production:
+  DATABASE_URL: postgresql://rails:rails123@localhost/activity_timer_prod
 
-#DB_ADAPTER: mysql2
-#DATABASE_URL: mysql2://rails:rails123@localhost/activity_timer_prod
+# DB_ADAPTER: mysql2
+# production:
+#   DATABASE_URL: mysql2://rails:rails123@localhost/activity_timer_prod
