--- a/package.json
+++ b/package.json
@@ -2,27 +2,26 @@
   "name": "activity_timer",
   "private": true,
   "dependencies": {
-    "@babel/preset-react": "^7.7.0",
-    "@primer/octicons": "^9.3.1",
+    "@babel/preset-react": "^7.9.4",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "^4.0.7",
+    "@rails/webpacker": "4.2.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "bootstrap": "^4.3.1",
-    "jquery": "^3.4.1",
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.5.0",
     "js-cookie": "^2.2.1",
     "jstimezonedetect": "^1.0.7",
-    "popper.js": "^1.16.0",
+    "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "rails-form-validation": "^1.0.1",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "sprintf-js": "^1.1.2",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.9.0"
+    "webpack-dev-server": "^3.10.3"
   }
 }
