--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "activity_timer",
   "private": true,
   "dependencies": {
-    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-react": "^7.10.1",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "bootstrap": "^4.4.1",
-    "jquery": "^3.5.0",
+    "bootstrap": "^4.5.0",
+    "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "jstimezonedetect": "^1.0.7",
     "popper.js": "^1.16.1",
@@ -18,10 +18,11 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sprintf-js": "^1.1.2",
+    "stimulus": "^1.1.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.11.0"
   }
 }
